Ops Guide/UseCases_CDO_Codes/UseCase3-ftdv_aws_terraform/single ftd/modules/aws_vpc/vpc.tf
# VPC
resource "aws_vpc" "vpc" {
  cidr_block           = var.combined_subnet_ranges["VPC"]
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name : "${local.vpc_resource_prefix}-vpc"
  }
}
